feat: Header design

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,4 +7,8 @@
 
 @import './assets/scss/base/global';
 @import './assets/scss/base/reset';
-@import './assets/scss/base/typhography' 
+@import './assets/scss/base/typhography' ;
+
+//Layout
+
+@import './assets/scss/layout/header';
